@@ -99,6 +99,11 @@ val min_big_int : big_int -> big_int -> big_int
 val num_digits_big_int : big_int -> int
         (** Return the number of machine words used to store the
            given big integer.  *)
+val num_bits_big_int : big_int -> int
+        (** Return the number of significant bits in the absolute
+            value of the given big integer.  [num_bits_big_int a]
+            returns 0 if [a] is 0; otherwise it returns a positive
+            integer [n] such that [2^(n-1) <= |a| < 2^n]. *)
 
 (** {6 Conversions to and from strings} *)
 
@@ -189,3 +194,4 @@ val base_power_big_int: int -> int -> big_int -> big_int
 val sys_big_int_of_string: string -> int -> int -> big_int
 val round_futur_last_digit : bytes -> int -> int -> bool
 val approx_big_int: int -> big_int -> string
+val round_big_int_to_float: big_int -> bool -> float
