@@ -85,6 +85,8 @@ extract_big_int
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10...
 hashing of big integers
  1... 2... 3... 4... 5... 6...
+float_of_big_int
+ 1... 2... 3... 4... 5... 6... 7... 8...
 create_ratio
  1... 2... 3... 4... 5... 6... 7... 8...
 create_normalized_ratio
@@ -143,6 +145,8 @@ approx_ratio_fix
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12... 13... 14...
 approx_ratio_exp
  1... 2... 3... 4... 5... 6... 7... 8... 9...
+float_of_ratio
+ 1...
 add_num
  1... 2... 3... 4... 5... 6... 7... 8... 9...
 sub_num
