@@ -81,6 +81,11 @@ Toplevel and debugger:
   (Peter Zotov and Jake Donham,
    review by Gabriel Scherer and Jacques-Henri Jourdan)
 
+Other libraries:
+- PR#6896: serious reimplementation of Big_int.float_of_big_int and
+  Ratio.float_of_ratio, ensuring that the result is correctly rounded.
+  (Xavier Leroy)
+
 OCamlbuild:
 - PR#6794, PR#6809: pass package-specific include flags when building C files
   (Jérémie Dimino, request by Peter Zotov)
